--- a/AjaxValidation/style.css
+++ b/AjaxValidation/style.css
@@ -1,56 +1,65 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: white;
+}
 
-  .container {
-    width: 400px;
-    padding: 16px;
-    background-color: #f1f1f1;
-    border: 1px solid black;
-    margin-top: 10px;
-    position: center;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  .title {
-    background-color: #59b300;
-    color: white;
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: none;
-    width: 100%;
-    text-align: center;
-  }
+.container {
+  width: 400px;
+  padding: 16px;
+  background-color: #f1f1f1;
+  border: 1px solid black;
+  margin-top: 10px;
+  position: center;
+}
 
-  input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: 1px solid black;
-    background: white;
-  }
-  
-  input:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-  
-  .buttonreg {
-    background-color: #59b300;
-    color: white;
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-  }
-  
-  .buttonreg:hover {
-    opacity: 1;
-  }
+.title {
+  background-color: #59b300;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  width: 100%;
+  text-align: center;
+}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: 1px solid black;
+  background: white;
+}
+
+input:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.buttonreg {
+  background-color: #59b300;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.buttonreg:hover {
+  opacity: 1;
+}
+
+.notification_error {
+  border: 1px solid #A25965;
+  height: auto;
+  width: 100%;
+  padding: 4px;
+  background: #F8F0F1;
+  text-align: center;
+}
